--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
+  <package id="Google.Apis" version="1.70.0" targetFramework="net48" />
+  <package id="Google.Apis.Auth" version="1.70.0" targetFramework="net48" />
+  <package id="Google.Apis.Core" version="1.70.0" targetFramework="net48" />
+  <package id="Google.Apis.Oauth2.v2" version="1.68.0.1869" targetFramework="net48" />
+  <package id="Google.Apis.PeopleService.v1" version="1.69.0.3785" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net48" />
